@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-keygen.1,v 1.51 2001/11/21 18:49:14 stevesk Exp $
+.\"	$OpenBSD: ssh-keygen.1,v 1.52 2001/12/21 08:52:22 djm Exp $
 .\"
 .\"  -*- nroff -*-
 .\"
@@ -86,10 +86,11 @@
 generates, manages and converts authentication keys for
 .Xr ssh 1 .
 .Nm
-defaults to generating a RSA1 key for use by SSH protocol version 1.
-Specifying the
+can create RSA keys for use by SSH protocol version 1 and RSA or DSA 
+keys for use by SSH protocol version 2. The type of key to be generated
+is specified with the
 .Fl t
-option instead creates a key for use by SSH protocol version 2.
+option.
 .Pp
 Normally each user wishing to use SSH
 with RSA or DSA authentication runs this once to create the authentication
@@ -202,8 +203,6 @@ for protocol version 1 and
 or
 .Dq dsa
 for protocol version 2.
-The default is
-.Dq rsa1 .
 .It Fl B
 Show the bubblebabble digest of specified private or public key file.
 .It Fl C Ar comment
