@@ -9,6 +9,10 @@
    - Add OpenSSL sanity check: verify that header version matches version
      reported by library
  - (djm) Fix some bugs I introduced into ssh-rand-helper yesterday
+ - OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2001/12/21 08:52:22
+     [ssh-keygen.1 ssh-keygen.c]
+     Remove default (rsa1) key type; ok markus@
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7156,4 +7160,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1724 2002/01/22 11:16:03 djm Exp $
+$Id: ChangeLog,v 1.1725 2002/01/22 12:05:08 djm Exp $
